--- a/Pages/FileUploader/Index.cshtml
+++ b/Pages/FileUploader/Index.cshtml
@@ -35,7 +35,8 @@
 @foreach (var item in Model.FileUpload) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.FileContent)
+                    <img src="data:image;base64,@System.Convert.ToBase64String(item.FileContent)" width="224"
+                         height="224" />
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.fileDate)
