Added nav support to live stream page

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -52,6 +52,11 @@
                     <p>Let Our Algorithm Go To Work</p>
                     <button class="service_button"><a href="/FileUpload" style="text-decoration:none">Get Started</a></button>
                 </div>
+                <div class="services__card">
+                    <h2>Stream your pet</h2>
+                    <p>Stream your pet using a camera</p>
+                    <button class="service_button"><a href="/LiveStream" style="text-decoration:none">Get Started</a></button>
+                </div>
             </div>
         </div>
         </div>
