--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                             <a class="navbar__links" asp-area="" asp-page="/FileUpload" style="text-decoration:none">File Upload</a>
                         </li>
                         <li class="nav-item">
+                            <a class="navbar__links" asp-area="" asp-page="/LiveStream" style="text-decoration:none">Stream</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="navbar__links" asp-area="" asp-page="/History" style="text-decoration:none">History</a>
                         </li>
                     </ul>
