edit/details/delete follow index layout

--- a/Pages/FileUploader/Edit.cshtml
+++ b/Pages/FileUploader/Edit.cshtml
@@ -4,10 +4,36 @@
 @{
     ViewData["Title"] = "Edit";
 }
+<style>
+    body {
+        background-color: #222831;
+        color: white;
+    }
+
+    h1 {
+        background-color: #222831;
+        color: white;
+    }
+
+    h3 {
+        background-color: #222831;
+        color: white;
+    }
+
+    a:link {
+        color: white;
+        background-color: transparent;
+        text-decoration: none;
+    }
+
+    a:visited {
+        color: white;
+        background-color: transparent;
+        text-decoration: none;
+    }
+</style>
 
 <h1>Edit</h1>
-
-<h4>FileUpload</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
