--- a/Pages/FileUploader/Delete.cshtml
+++ b/Pages/FileUploader/Delete.cshtml
@@ -5,18 +5,46 @@
     ViewData["Title"] = "Delete";
 }
 
+<style>
+    body{
+        background-color: #222831;
+        color: white;
+    }
+    h1{
+        background-color: #222831;
+        color: white;
+    }
+
+    h3 {
+        background-color: #222831;
+        color: white;
+    }
+
+    a:link {
+        color: white;
+        background-color: transparent;
+        text-decoration: none;
+    }
+
+    a:visited {
+        color: white;
+        background-color: transparent;
+        text-decoration: none;
+    }
+</style>
+
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this picture?</h3>
 <div>
-    <h4>FileUpload</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.FileUpload.FileContent)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FileUpload.FileContent)
+            <img src="data:image;base64,@System.Convert.ToBase64String(Model.FileUpload.FileContent)" width="224"
+                 height="224" />
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.FileUpload.fileDate)
