Almost fell though

--- a/Pages/LiveStream.cshtml
+++ b/Pages/LiveStream.cshtml
@@ -1,5 +1,5 @@
 @page
-@model LiveSteamModel
+@model LiveStreamModel
 @inject Microsoft.AspNetCore.Antiforgery.IAntiforgery Xsrf
 @functions{
 public string GetAntiXsrfRequestToken()
