--- a/Pages/FileUpload.cshtml
+++ b/Pages/FileUpload.cshtml
@@ -2,9 +2,9 @@
 @model FileUploadModel
 @inject Microsoft.AspNetCore.Antiforgery.IAntiforgery Xsrf
 @functions{
-public string GetAntiXsrfRequestToken()
+public string? GetAntiXsrfRequestToken()
 {
-    return Xsrf.GetAndStoreTokens(Model.HttpContext).RequestToken;
+    return  Xsrf.GetAndStoreTokens(Model.HttpContext).RequestToken;
 }
 }
 
