--- a/Pages/LiveStream.cshtml
+++ b/Pages/LiveStream.cshtml
@@ -56,18 +56,19 @@ public string GetAntiXsrfRequestToken()
             </div>
             <div class="row justify-content-center mt-4">
                 <div class="col-md-8">
-                    <div class="broadcast_emotionBox text-center" style="display: none;">
+                    <div class="text-center">
+                        <video id="vid" class="img-fluid"></video>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center mt-4">
+                <div class="col-md-8">
+                    <div class="broadcast_emotionBox text-center">
                         <p class="broadcast_emotionTitle">Emotion Detected: <span id="emotionContent">Thinking...</span></p>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="row justify-content-center mt-4">
-        <div class="col-md-8">
-            <div class="text-center">
-                <video id="vid" class="img-fluid"></video>
-            </div>
+
         </div>
     </div>
 
@@ -99,7 +100,7 @@ public string GetAntiXsrfRequestToken()
         document.getElementById('broadcastBtn').addEventListener('click', function () {
 	    let video = document.getElementById("vid");
 	    let mediaDevices = navigator.mediaDevices;
-        emotionValues = [0, 0, 0, 0];
+        intValues = [0, 0, 0, 0];
 
 	    mediaDevices
                 .getUserMedia({
@@ -112,6 +113,7 @@ public string GetAntiXsrfRequestToken()
                     video.addEventListener("loadedmetadata", () => {
                         video.play();
                         // Start capturing snapshots every 5 seconds
+                        showEmotionBox();
                         intervalID = setInterval(captureSnapshot, 5000);
                     });
 		    }).catch(alert); 
@@ -130,6 +132,13 @@ public string GetAntiXsrfRequestToken()
             video.srcObject = null;
 
             clearInterval(intervalID);
+            hideEmotionBox();
+
+            // TODO: WHY ISNT THIS WORKING?
+            // Don't want to send nothing to the DB
+            if (intValues == [0, 0, 0, 0]) {
+                console.log("Not enough data!")
+            }
 
             console.log("Stream emotion values: " + intValues);
             let { value, maxIndex } = getMostCommon();
@@ -255,6 +264,17 @@ public string GetAntiXsrfRequestToken()
             return { value: max, maxIndex: e };
         }
 
+        // Function to show the emotion box
+        function showEmotionBox() {
+            const emotionBox = document.querySelector('.broadcast_emotionBox');
+            emotionBox.style.display = 'block';
+        }
+
+        // Function to hide the emotion box
+        function hideEmotionBox() {
+            const emotionBox = document.querySelector('.broadcast_emotionBox');
+            emotionBox.style.display = 'none';
+        }
     </script>
 </body>
 </html>
