--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -437,10 +437,6 @@
     }
 }
 
-
-
-
-
 .upload__container {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -464,6 +460,26 @@
 
 .upload_buttonR {
     display: inline-block;
+}
+
+.broadcast_emotionBox {
+    display: none; /* Initially hide the emotion box */
+    margin-top: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    width: 400px;
+    text-align: center;
+    position: absolute; /* Position the emotion box absolutely */
+    bottom: 10px; /* Adjust as needed */
+    left: 50%; /* Center horizontally */
+    transform: translateX(-50%); /* Center horizontally */
+    background-color: #ced4da; /* Default color */
+    max-height: 50px; /* Set maximum height */
+}
+
+.upload_broadcastTitle {
+    font-weight: bold;
+    margin-bottom: 5px;
 }
 
 .calendar_container {
